switched formSlide to relative to prevent overlapping w/footer, fixed render issues w/non desktop/mobile resolutions

--- a/styles/sass/partials/_body.scss
+++ b/styles/sass/partials/_body.scss
@@ -77,7 +77,7 @@ main {
     gap: 6px;
     padding: 10px;
     margin: 0 0 20px 0;
-    background-color: rgba(255,255,255,0.05);
+    background-color: rgba(255, 255, 255, 0.05);
     transition: 0.4s all;
 
     img {
@@ -148,7 +148,7 @@ main {
             border-bottom: none;
         }
     }
-    
+
     .measurementContainer {
         border-right: 1px solid #eee;
     }
@@ -169,6 +169,7 @@ main {
     background-color: $accentYellow;
     box-shadow: 0 4px 0 $shadeYellow;
     transition: 0.1s all;
+
     &:hover,
     &:focus {
         transform: translateY(4px);
@@ -195,8 +196,10 @@ main {
 
 .inactiveForm {
     transform: translateX(-150%);
+    display: none;
 }
 
 .inactiveDrink {
     transform: translateX(150%);
+    display: none;
 }
